tests/diagnostic_golden_cc/semantic_decl_char_len.diag
error[CF3103]: assumed character length is only valid for dummy arguments or function results
  --> tests/diagnostic_golden_cc/semantic_decl_char_len.f:2:7
   = stage: semantic
   = help: see docs/errors.md#CF3103
  |
2 |       CHARACTER*(*) A
  |       ^
   = note: An assumed CHARACTER length declaration outside a dummy argument or function result is not semantically valid.
   = help: Use a constant CHARACTER length, or make the entity a dummy argument, POINTER, ALLOCATABLE, or function result.
